--- a/mystyle.css
+++ b/mystyle.css
@@ -117,6 +117,15 @@ main {
     justify-items: center;
 }
 
+.apuntate-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 100%;
+    padding: 0 20px;
+    justify-items: center;
+}
+
 .section {
     background-color: var(--blanco);
     padding: 20px;
@@ -178,7 +187,6 @@ main {
   left: 50%;
   transform: translate(-50%, -50%) scale(.9); /* escala inicial */
   background: #fff;
-  padding: 30px;               /* más espacio */
   width: 95%;                  /* ancho mayor, casi todo el viewport */
   max-width: 600px;            /* límite máximo */
   border-radius: 10px;
@@ -186,6 +194,7 @@ main {
   pointer-events: none;
   transition: 0.3s;
   font-size: 1.2rem;           /* texto más grande */
+  padding: 40px 30px 30px 30px; /* top, right, bottom, left */
 }
 
 .popup.active {
