--- a/mystyle.css
+++ b/mystyle.css
@@ -112,7 +112,7 @@ main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    max-width: 960px;      /* ancho máximo del grid */
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
     justify-items: center;
