--- a/mystyle.css
+++ b/mystyle.css
@@ -113,6 +113,7 @@ main {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     width: 100%;
+    margin: 0 auto;
     padding: 0 20px;
     justify-items: center;
 }
