--- a/mystyle.css
+++ b/mystyle.css
@@ -113,7 +113,6 @@ main {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     width: 100%;
-    margin: 0 auto;
     padding: 0 20px;
     justify-items: center;
 }
@@ -189,17 +188,12 @@ main {
     width: 90%;
 }
 
-.popup.active {
-  opacity: 1;
-  pointer-events: auto;
-  transform: translate(-50%, -50%) scale(1);
-}
-
 .popup input,
-.popup textarea,
-.popup button {
+.popup textarea {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
+  font-size: 1rem;             /* inputs un poco más grandes */
+  padding: 10px;
 }
 
 .popup.show {
@@ -268,11 +262,6 @@ main {
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     z-index: 999;
-}
-
-.overlay.active {
-  opacity: 1;
-  pointer-events: auto;
 }
 
 .overlay.show {
