--- a/mystyle.css
+++ b/mystyle.css
@@ -192,7 +192,7 @@ main {
 .popup textarea {
   width: 100%;
   margin-bottom: 12px;
-  font-size: 1.5rem;             /* inputs un poco más grandes */
+  font-size: 3rem;             /* inputs un poco más grandes */
   padding: 10px;
 }
 
@@ -256,7 +256,7 @@ main {
 
 .overlay {
     display: none;
-    position: fixed;
+    position: center;
     top: 0;
     left: 0;
     width: 100%;
