--- a/mystyle.css
+++ b/mystyle.css
@@ -110,11 +110,13 @@ main {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /*grid-template-columns: repeat(3, 1fr);*/
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
     gap: 20px;
     width: 100%;
     padding: 0 20px;
     justify-items: center;
+    justify-content: center;
 }
 
 .section {
