--- a/mystyle.css
+++ b/mystyle.css
@@ -111,7 +111,7 @@ main {
 .projects-grid {
     display: grid;
     /*grid-template-columns: repeat(3, 1fr);*/
-    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 20px;
     width: 100%;
     padding: 0 20px;
@@ -127,6 +127,7 @@ main {
     text-align: left;
     width: 70%;
     margin: 0 auto;
+    max-width: 1200px;
     /*transition: transform 0.3s ease, box-shadow 0.3s ease;
     width: 100%;
     max-width: 350px;*/
