--- a/mystyle.css
+++ b/mystyle.css
@@ -114,7 +114,7 @@ main {
     gap: 20px;
     width: 100%;
     padding: 0 20px;
-    justify-content: center;
+    justify-items: center;
 }
 
 .section {
