--- a/mystyle.css
+++ b/mystyle.css
@@ -165,6 +165,7 @@ main {
     font-weight: 500;
     transition: all 0.3s ease;
     cursor: pointer;
+    text-align: center;
 }
 
 .saber-mas:hover {
